# devtools

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
ai/claude/user/.claude/agents/: code-reviewer.md  researcher.md  test-runner.md
ai/claude/user/.claude/skills/dependency-audit/: SKILL.md
ai/claude/user/.claude/skills/git-analyze/: SKILL.md
ai/claude/user/.claude/skills/makefile/: SKILL.md
src/: exec.rs  lib.rs  main.rs  output.rs  sync.rs
src/config/: mod.rs  schema.rs
src/devtools/: cli.py
src/devtools/commands/: ai.py
src/devtools/templates/claude/repo/.claude/: CLAUDE.md
src/devtools/templates/claude/user/.claude/: CLAUDE.md
src/devtools/utils/: paths.py  sync.py
src/sections/: claude.rs  directories.rs  dotfiles.rs  git_config.rs  mod.rs  packages.rs  repositories.rs  ssh.rs
templates/claude/user/.claude/agents/: debugger.md
templates/claude/user/.claude/skills/: SKILLS_GUIDE.md
templates/claude/user/.claude/skills/airflow/: SKILL.md
templates/claude/user/.claude/skills/alembic/: SKILL.md
templates/claude/user/.claude/skills/altair/: SKILL.md
templates/claude/user/.claude/skills/commit/: SKILL.md
templates/claude/user/.claude/skills/commit-and-push/: SKILL.md
templates/claude/user/.claude/skills/dbt/: SKILL.md
templates/claude/user/.claude/skills/deploy-check/: SKILL.md
templates/claude/user/.claude/skills/github-actions/: SKILL.md
templates/claude/user/.claude/skills/gitlab-ci/: SKILL.md
templates/claude/user/.claude/skills/openapi/: SKILL.md
tests/: test_ai_install.py  test_sync.py
(+30 files in other folders)
