[project]
name = "devtools"
version = "0.1.0"
description = "Developer tooling CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
devtools = "devtools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtools"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
